--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"svelte": "^4.2.11",
 		"svelte-check": "^3.6.4",
 		"svelte-meta-tags": "^3.1.0",
+		"terser": "^5.27.2",
 		"ts-node": "^10.9.2",
 		"tslib": "^2.6.2",
 		"type-fest": "^4.10.3",
