--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true,
-		"skipLibCheck": true,
+		"skipLibCheck": false,
 		"sourceMap": true,
 		"strict": true,
 		"experimentalDecorators": true, // ESBuild doesn't support TS 5.0 decorators
